# chromsim

./: .gitignore  README.md  TODO.md  example.sh  inversion_sim.py  inversion_sim.sh  inversion_sim_array.sh  plot_runtime.py  pyproject.toml
example_SLURM_scripts/: inversion_sim.sh  inversion_sim_array.sh  inversion_sim_array_args  with_window.sh
example_results/: averages.minv  example.inv  example.mc
example_scripts/: HVU_RES_xy_reciprocal_best_hits.coloredby_BCnS_LGs.plotted.rbh  averages.sh  basic.sh  basic_with_gif.sh  example.sh  from_rbh.sh
inversion_sim/: chromosome.py  inversion_sim.py  main.py  plot.py  utils.py
