[tool.poetry]
name = "chromsim"
version = "0.1.0"
description = "This program calculates the time it takes for any gene to interact with another after a fusion-with mixing event."
authors = ["dogsoahC <arno.bluemel@proton.me>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.11.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
